--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ input{
 body{
     background-color: rgb(247, 247, 247);
 }
+main{
+    position: relative;
+    top:-14%;
+}
 .hero-image{
     background-image:linear-gradient(rgba(17, 16, 16, 0.4), rgba(0, 0, 0, 0.0)), url('./images/image-hero-desktop.jpg');
     background-attachment: scroll;
@@ -55,7 +59,7 @@ img{
     margin: 45px auto;
 }
 .card{
-    top:-14%;
+    /* top:-14%; */
     box-sizing: border-box;
     background-color: rgb(255, 255, 255);
     border:solid 1px rgba(233, 233, 233,.7);   
